# radio-file-organizer

./: .gitignore  README.md  file_organize.py  program.json  pyproject.toml  run-nhk.sh  run-remove-nhk.sh
.github/workflows/: python-test.yml
docs/: .buildinfo  index.html  lib.html  py-modindex.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  lib.doctree
docs/_modules/: index.html
docs/_modules/lib/: program_cls.html  utils.html
docs/_sources/: index.rst.txt
docs/source/: conf.py
lib/: programClass.py  program_cls.py  utils.py
source/: conf.py  lib.rst
tests/: test_utils.py
