[tool.poetry]
name = "script"
version = "0.1.0"
description = ""
authors = ["masayukeeeee <masayukeeeee@gmail.com>"]
readme = "README.md"
packages = [
    { include = "lib", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"
ipdb = "^0.13.13"
mypy = "^1.8.0"
flake8 = "^6.1.0"
black = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
